service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-service
  namespace: example58
spec:
  type: NodePort
  selector:
    pods: sample-web-pod
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30880
